k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
    appgw.ingress.kubernetes.io/use-private-ip: "false"
  name: frontend-ingress
  namespace: younyoung
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: younyoung.20.249.139.69.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
